# grayscott-wasm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: learn-site.yml  quality.yml
benches/: inverse_overhead.rs
docs/: README.md  experiment-log.md  manualcheck-browser-render.md  plan.md  reproducibility.md  research-directions.md
examples/: export_fields.rs  summary.rs
learn/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
learn/guide/: algorithm-map.md  big-picture.md  browser-and-simd.md  code-organization.md  common-questions.md  complexity-and-parallelism.md  computer-science-concepts.md  cpu-and-gpu.md  experiment-map.md  forward-solver-math.md  (+10 more)
paper/: .gitignore  main.tex  references.bib
reference/: reference_numpy.py  reference_scalar.py
src/: inverse.rs  lib.rs  solver.rs  wasm.rs
tests/: regression.rs
tools/: bench_forward_js.mjs  bench_forward_wasm.mjs  bench_forward_wasm_simd.mjs  bench_grayscale_render.mjs  bench_wasm_boundary.mjs  bench_wasm_views.mjs  build_wasm_node.sh  build_wasm_node_simd.sh  build_wasm_web.sh  check_js.sh  check_wasm_node.mjs  check_wasm_simd.mjs  check_wasm_views.mjs  compare_numpy_reference.py  compare_scalar_reference.py  export_wasm_fields.mjs  full_field_metrics.py  install-hooks.sh  quality.sh  run_browser_inverse_bench.mjs  run_browser_render_bench.mjs  wasm_full_field_metrics.py
www/: inverse.css  inverse.html  inverse.js  inverse_worker.js  render_bench.css  render_bench.html  render_bench.js
(+5 files in other folders)
