[package]
name = "grayscott-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust/WebAssembly Gray-Scott reaction-diffusion research artifact"
repository = "https://github.com/itisrohit/grayscott-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
