[project]
name = "grayscott-wasm-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff>=0.15.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PL",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tools/compare_*_reference.py" = ["E402", "I001"]
"tools/full_field_metrics.py" = ["E402", "I001"]
